<resources>

    <!-- 전역 -->
    <string name="app_name">원격안전도우미</string>
    <string name="main_tab1_title">홈</string>
    <string name="rtc_tab1_title">보관함</string>
    <string name="action_settings">설정</string>
    <string name="title_user_info">내 정보</string>
    <string name="title_safety_zone">안전지대</string>
    <string name="no_data">보관된 자료가 없습니다.</string>
    <string name="action_search">Search</string>
    <string name="search_hint">ex)편의점</string>
    <string name="search_text">검색</string>
    <string name="save">저장</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <!-- 네비게이션 -->
    <string name="nav_safezone">안전지대</string>
    <string name="nav_app_help_title">도움말</string>
    <string name="nav_app_settings_title">설정</string>
    <string name="nav_family_title">패밀리</string>
    <string name="nav_family1_title">오산시청 홈페이지</string>
    <string name="nav_family2_title">스마트오산</string>
    <string name="nav_chat">상담톡(Demo)</string>

    <!-- 액티비티 타이틀 -->
    <string name="settings_activity_title">설정</string>

    <!-- 설정 -->
    <string name="pref_user_info_title">내 정보</string>
    <string name="pref_user_name_title">성명</string>
    <string name="pref_user_name_summary">여기를 클릭하여 내 정보를 등록, 수정할 수 있습니다.</string>
    <string name="pref_app_info2">앱 정보</string>
    <string name="pref_app_version_title">현재 버전</string>
    <string name="pref_app_info_title">애플리케이션 정보</string>
    <string name="pref_app_info_summary">사용량, 배터리, 저장공간, 권한 등</string>
    <string name="pref_app_troubles_title">디바이스 점검</string>
    <string name="pref_app_troubles_summary">디바이스 및 네트워크 환경을 점검합니다.</string>
    <string name="pref_app_opensource_license_title">오픈소스 라이센스</string>
    <string name="pref_app_policy_service_title">이용약관</string>
    <string name="pref_app_policy_privacy_title">개인정보처리방침</string>
    <string name="pref_app_policy_youth_title">청소년보호정책</string>

    <!-- 액션 -->
    <string name="action_save">저장하기</string>

    <!-- 확인 -->
    <string name="confirm_call_title">연결</string>
    <string name="confirm_call">안전도우미와 연결하시겠습니까?</string>
    <string name="confirm_need_myinfo_title">필수입력</string>
    <string name="confirm_need_myinfo">상담을 위한 사용자정보가 필요합니다.</string>

</resources>