<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_user_info_title">
        <Preference
            android:key="user_name"
            android:summary="@string/pref_user_name_summary"
            android:title="@string/pref_user_name_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_app_info_title">
        <Preference
            android:key="app_version_name"
            android:title="@string/pref_app_version_title" />
        <Preference
            android:key="app_troubles"
            android:summary="@string/pref_app_troubles_summary"
            android:title="@string/pref_app_troubles_title" />
    </PreferenceCategory>

</PreferenceScreen>