<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_safezone"
            android:icon="@drawable/ic_directions_run"
            android:title="@string/nav_safezone" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_app_help_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_app_settings_title" />
    </group>

    <item android:title="@string/nav_family_title">
        <menu>
            <item
                android:id="@+id/nav_osan_homepage"
                android:icon="@drawable/ic_open_in_browser"
                android:title="@string/nav_family1_title" />
            <item
                android:id="@+id/nav_osan_smart"
                android:icon="@drawable/ic_get_app"
                android:title="@string/nav_family2_title" />
        </menu>
    </item>
</menu>